SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in snapshots and future releases.
===============================================================================================

Enhancements:

Introduced Java 16 compatibility.

#599 DB2 Plugin: New Object tree details tab "DB2 column details" which for DB2 on AS400 among others shows CCSIDs.

Look and feel Plugin: Upgraded FlatLaf Look and Feel to version 1.0.
   Thanks to Stanimir Stamenkov for the patch.

Table right mouse menu item "Show distinct values..." is available in more tables.

Find columns function: Added search in progress indicator and number of tables searched.

SQL code completion popup: Schema/Catalog-names are now displayed with appended "(SCHEMA)" / "(CATALOG)" respectively.

Find columns function available in
  - Session menu and toolbar (Alt+Shift+F)
  - Right mouse menu of Object tree
  - Right mouse menu of Graphs

SQL result tab: Text on top of panel is now selectable and offers several copy functions in its right mouse menu.

Brushed up the Mac OS installer (It is recommended to delete previous Mac OS version before installing the new version)
  - Start up splash screen is displayed
  - Plugins are loaded correctly (bug #1449)
  - Look & Feel Plugin is available
  - Legacy Mac OS Plugin was made an optional Plugin

#596 Shortcuts Alt-Y, Alt-N for the following dialogs:
   Confirm Session closing (Ctrl-Q)
   Reconnect to database (Ctrl-Alt-T)
   Unsaved Changes

Option to use the Vertical-blank Sql-formatter (https://github.com/vertical-blank/sql-formatter) instead of SQuirreL's internal formatter.
  To switch to the Vertical-blank formatter go to menu File --> Global Preference --> tab "SQL formatting".
  This change was inspired by the discussion in bug #1455.

Merge request #73: Add possibility to inject JVM arguments via SQUIRREL_SQL_OPTS command line environment variable.