@@ -10,7 +10,11 @@ GeneralPreferencesPanel.localeChooserLabel=Locale:
 GeneralPreferencesPanel.logging=Logging
 GeneralPreferencesPanel.maxonopen=Maximize Session Sheet on Open
 GeneralPreferencesPanel.paths=SQuirreL paths
-GeneralPreferencesPanel.savePreferencesImmediately=Save Preferences Immediately
+
+GeneralPreferencesPanel.saveNoPreferencesImmediately=Do not save immediately
+GeneralPreferencesPanel.saveAliasesAndDriversImmediately=Save Aliases and Drivers immediately
+GeneralPreferencesPanel.savePreferencesImmediately_new=Save Preferences (including Aliases and Drivers) immediately
+
 GeneralPreferencesPanel.selectOnRightMouseClick=Select Object tree Nodes On Right Mouse Click
 GeneralPreferencesPanel.showaliasestoolbar=Show Aliases Toolbar
 GeneralPreferencesPanel.showcoloricons=Show Color Icons In Toolbars
@@ -150,7 +154,7 @@ GeneralPreferencesPanel.useScrollableTabbedPanesForSessionTabs=Use scrollable ta
 GeneralPreferencesPanel.internalFrameStyle=Use MDI/Internal Frame layout (needs restart)
 GeneralPreferencesPanel.showTabbedStyleHint=Warn MDI/Internal Frame layout is deprecated
 
-GeneralPreferencesPanel.savePreferencesImmediatelyWarning=Warning:\nMay significantly slow down SQL execution\nif multiple statements are executed\nor if SQL history size is big\n(see menu 'New Session Properties' --> tab 'SQL' --> SQL History)
+GeneralPreferencesPanel.savePreferencesImmediatelyWarning_new=Warning:\nSaving Aliases and Drivers immediately may significantly slow down\nediting Aliases and Drivers if many Aliases or Drivers exist.\nSaving Preferences immediately may significantly slow down SQL execution\nif multiple statements are executed or if SQL history size is big\n(see menu 'New Session Properties' --> tab 'SQL' --> SQL History).
 
 UpdatePreferencesPanel.proxyHintHtml=<html><a href=#1>Note: Proxy may be set up here</a></html>
 
